--- a/src/app/core/editstudents/editstudents/editstudents.component.html
+++ b/src/app/core/editstudents/editstudents/editstudents.component.html
@@ -17,7 +17,7 @@
               Looks good!
             </div>
             <a routerLink="/" class="btn btn-secondary btn-sm mt-5">Close</a>
-            <input  value="Confirm" class="btn btn-success btn-sm mt-5">
+            <input  value="Confirm" class="btn btn-success btn-sm mt-5" type="submit">
 
           </form>
         </div>
